# lvfs-qplayer

./: CMakeLists.txt
cmake/: FindPhonon.cmake  platform_options.cmake
src/: lvfs_qplayer_Editor.cpp  lvfs_qplayer_Editor.h  lvfs_qplayer_Package.cpp  lvfs_qplayer_Package.h  lvfs_qplayer_Plugin.cpp  lvfs_qplayer_Plugin.h
src/gui/: lvfs_qplayer_Player.cpp  lvfs_qplayer_Player.h
